# research-project

./: .gitignore  Cargo.toml  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt  sensitivity_schema.sql  setup_venv.sh
crates/reservoire/: .gitignore  Cargo.toml  logs  output.csv  show_output.py
crates/reservoire-extensions/: Cargo.toml
crates/reservoire-extensions/src/: heterogenous.rs  homogenous.rs  input_step.rs  lib.rs
crates/reservoire/src/: heterogenous_model.rs  integration.rs  izikevich_model.rs  lib.rs  test_input.rs
crates/reservoire/src/new_model/: mod.rs
crates/reservoire_extensions/src/: heterogenous.rs  input_step.rs  lib.rs  new_model.rs
data/: output.csv
model/: __init__.py  reservoire.py
model/tests/: reservoire_testing.py
models/: integrate-and-fire_with_euler.py  integrate_and_fire.py  izhikivich_model.py  resonate-and-fire.py
network/: nest_model.py
network/nest_examples/: example_1.py
new_model/: reservoire.py
old_model/: model.py  reservoire.py
python/: framework_test.py  plots.py  sensitivity_analysis.py  sensitivity_plots.py
python/research/: __init__.py  __init__.pyi
python/research/tests/: reservoire_testing.py
python/resframe/: __init__.py  __init__.pyi  heterogenous_model.py  homogenous_model.py  ht_model.py  model.py  pipeline.py  res_wrapper.py  sensitivity_analysis.py
python/resframe/tests/: reserviore_testing.py
reservoire/: Cargo.toml
reservoire/src/: lib.rs  reservoire.rs
scripts/: plot_data.py
