[package]
name = "izikevich-reservoire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ode_solvers = "0.3.6"
nalgebra = "0.31.1"
rand = "0.8.5"
rand_distr = "0.4.3"
either = "1.8.0"
log = "0.4.8"

[dev-dependencies]
env_logger = "0.9.0"
