[package]
name = "reservoire-extensions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "reservoire_extension"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.16", features = ["abi3-py37", "extension-module"] }
reservoire = { path = "../reservoire", version = "0.1.0" }
