[package]
name = "reservoire-extensions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "reservoire_extension"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
either = "1.8.0"
nalgebra = "0.31.2"
pyo3 = { version = "0.17.2", features = ["abi3-py37", "extension-module"] }
pyo3-log = "0.7.0"
reservoire = { path = "../reservoire", version = "0.1.0" }
log = "0.4.17"
