[package]
name = "reservoire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ode_solvers.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true
either.workspace = true
log.workspace = true
pyo3-log.workspace = true


[dev-dependencies]
env_logger.workspace = true
